Add opengraph and twitter card

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Three Uilas - Electric Farm & Off-Road Utility Vehicles | Hawaiʻi</title>
   <meta name="description" content="Built for farm work and off-road use. Quality electric utility vehicles for Hawaiian workers and farmers at fair prices.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://threeuilas.com/">
+  <meta property="og:title" content="Three Uilas - Electric Farm & Off-Road Utility Vehicles | Hawaiʻi">
+  <meta property="og:description" content="Built for farm work and off-road use. Quality electric utility vehicles for Hawaiian workers and farmers at fair prices.">
+  <meta property="og:image" content="https://threeuilas.com/assets/images/three-uilas-production.jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Three Uilas">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://threeuilas.com/">
+  <meta property="twitter:title" content="Three Uilas - Electric Farm & Off-Road Utility Vehicles | Hawaiʻi">
+  <meta property="twitter:description" content="Built for farm work and off-road use. Quality electric utility vehicles for Hawaiian workers and farmers at fair prices.">
+  <meta property="twitter:image" content="https://threeuilas.com/assets/images/three-uilas-production.jpeg">
+  
   <link rel="stylesheet" href="../dist/index_output.css">
   <link rel="stylesheet" href="../assets/fonts.css">
   
