--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
   <nav class="bg-white shadow-sm sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center py-4">
-        <div class="flex items-center space-x-4">
+        <div class="flex items-center space-x-2">
           <img src="../assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo" class="h-12 w-auto">
           <div class="flex items-center space-x-1">
             <span class="asap-condensed-bold text-2xl text-gray-900">THREE</span>
@@ -183,7 +183,7 @@
           </div>
           <h3 class="asap-condensed-bold text-xl text-gray-900 mb-2">Fully Electric</h3>
           <p class="asap-condensed-medium text-gray-600">
-            Zero emissions, quiet operation, and low maintenance costs - built for the long haul.
+            Zero emissions, quiet operation, and low maintenance costs - made for the long haul.
           </p>
         </div>
 
@@ -222,9 +222,6 @@
         <h2 class="asap-condensed-bold text-4xl md:text-5xl text-gray-900 mb-4">
           Farm & Off-Road Utility Vehicles
         </h2>
-        <p class="asap-condensed-medium text-xl text-gray-600 max-w-3xl mx-auto">
-          Built for farm work and off-road use - designed for local communities.
-        </p>
       </div>
 
       <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -305,7 +302,7 @@
         
         <div>
           <h2 class="asap-condensed-bold text-4xl md:text-5xl text-gray-900 mb-6">
-            Built for the People, by the People
+            From Our Community, For Our Community
           </h2>
           <p class="asap-condensed-medium text-lg text-gray-600 mb-6">
             Three Uilas was started by local people who understand what our communities need. We wanted affordable utility 
