--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,15 @@
   <meta property="twitter:url" content="https://threeuilas.com/">
   <meta property="twitter:title" content="Three Uilas - Electric Farm & Off-Road Utility Vehicles | Hawaiʻi">
   <meta property="twitter:description" content="Built for farm work and off-road use. Quality electric utility vehicles for Hawaiian workers and farmers at fair prices.">
-  <meta property="twitter:image" content="https://threeuilas.com/assets/images/three-uilas-production.jpeg">
+  <meta property="twitter:image" content="https://threeuilas.com/assets/images/three-uilas-production-thumbnail.jpeg">
   
-  <link rel="stylesheet" href="../dist/index_output.css">
-  <link rel="stylesheet" href="../assets/fonts.css">
+  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./assets/fonts.css">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../assets/three-uilas-favicon.svg">
-  <link rel="icon" type="image/png" href="../assets/three-uilas-favicon.png">
-  <link rel="shortcut icon" href="../assets/three-uilas-favicon.png">
+  <link rel="icon" type="image/svg+xml" href="./assets/three-uilas-favicon.svg">
+  <link rel="icon" type="image/png" href="./assets/three-uilas-favicon.png">
+  <link rel="shortcut icon" href="./assets/three-uilas-favicon.png">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center py-4">
         <div class="flex items-center space-x-2">
-          <img src="../assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo" class="h-12 w-auto">
+          <img src="./assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo" class="h-12 w-auto">
           <div class="flex items-center space-x-1">
             <span class="asap-condensed-bold text-2xl text-gray-900">THREE</span>
             <span class="asap-condensed-bold text-2xl text-red-600">UILAS</span>
@@ -79,7 +79,7 @@
       <!-- Mobile menu header -->
       <div class="mobile-menu-header">
         <div class="mobile-menu-logo">
-          <img src="../assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo">
+          <img src="./assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo">
           <div class="mobile-menu-logo-text">
             <span class="three">THREE</span>
             <span class="uilas">UILAS</span>
@@ -284,9 +284,9 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4">
-                  <img src="../assets/images/dump-bed-side-view.jpg" alt="Side view of electric cargo trike" class="rounded-lg shadow-lg">
-        <img src="../assets/images/dump-bed-rear-view.jpg" alt="Rear view of electric cargo trike" class="rounded-lg shadow-lg">
-        <img src="../assets/images/dump-bed-gate.jpg" alt="Dump bed gate detail" class="rounded-lg shadow-lg col-span-2">
+                  <img src="./assets/images/dump-bed-side-view.jpg" alt="Side view of electric cargo trike" class="rounded-lg shadow-lg">
+        <img src="./assets/images/dump-bed-rear-view.jpg" alt="Rear view of electric cargo trike" class="rounded-lg shadow-lg">
+        <img src="./assets/images/dump-bed-gate.jpg" alt="Dump bed gate detail" class="rounded-lg shadow-lg col-span-2">
         </div>
       </div>
     </div>
@@ -297,7 +297,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div>
-          <img src="../assets/images/three-uilas-production.jpeg" alt="Three Uilas production facility" class="rounded-lg shadow-lg">
+          <img src="./assets/images/three-uilas-production.jpeg" alt="Three Uilas production facility" class="rounded-lg shadow-lg">
         </div>
         
         <div>
@@ -367,7 +367,7 @@
       <div class="grid md:grid-cols-2 gap-8 text-center">
         <div>
           <div class="flex items-center justify-center space-x-3 mb-3">
-            <img src="../assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo" class="h-8 w-auto md:h-10">
+            <img src="./assets/three-uilas-logo-icon.svg" alt="Three Uilas Logo" class="h-8 w-auto md:h-10">
             <div class="flex items-center space-x-1">
               <span class="asap-condensed-bold text-lg text-white md:text-xl">THREE</span>
               <span class="asap-condensed-bold text-lg text-white md:text-xl">UILAS</span>
