--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,7 @@
           <div class="space-y-1 text-gray-400">
             <p class="asap-condensed-medium">(808) 895-8882</p>
             <p class="asap-condensed-medium">info@threeuilas.com</p>
-            <p class="asap-condensed-medium">Hawaiʻi, USA</p>
+            <p class="asap-condensed-medium">Hawaiʻi Island</p>
           </div>
         </div>
       </div>
